--- a/mm/sass/blocks/edge.scss
+++ b/mm/sass/blocks/edge.scss
@@ -26,12 +26,10 @@
   }
 }
 
-@media screen and ($tablet-widths) {
-
-}
+@media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
-  // .edge__flex {
-  //   flex-wrap: wrap;
-  // }
+  .edge__flex {
+    flex-wrap: wrap;
+  }
 }
