--- a/mm/sass/blocks/footer.scss
+++ b/mm/sass/blocks/footer.scss
@@ -10,6 +10,7 @@
   }
   
   ul {
+    padding-left: 0;
     font-family: 'SF UI Display Light', sans-serif;
     list-style-image: url('../img/r-arrow-s.png');
     list-style-position: inside;
@@ -47,4 +48,12 @@
 .footer__flex {
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .footer__flex {
+    flex-wrap: wrap;
+  }
 }
