--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -32,3 +32,15 @@
   font-family: 'SF UI Text Regular', sans-serif;
   opacity: 0.7;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .title {
+    text-align: center;
+    
+    h1 {
+      font-size: 30px;
+    }
+  }
+}
