--- a/mm/sass/blocks/header.scss
+++ b/mm/sass/blocks/header.scss
@@ -7,18 +7,15 @@
   background: rgba(37, 37, 37, 0.7);
 }
 
-@media screen and ($tablet-widths) {
-
-}
+@media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
   .header {
     padding-top: 30px;
-    height: 200px;
   }
   
-  // .header--temp {
-  //   height: 180px;
-  //   padding-bottom: 30px;
-  // }
+  .header--temp {
+    height: 100px;
+    padding-bottom: 30px;
+  }
 }
