--- a/mm/sass/blocks/segregated.scss
+++ b/mm/sass/blocks/segregated.scss
@@ -51,3 +51,17 @@
     list-style-image: url('../img/r-arrow-s.png');
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .segregated__content {
+    
+    h1 {
+      font-size: 30px;
+      text-align: center;
+    }
+  }
+  
+  
+}
