--- a/mm/sass/blocks/sub-nav.scss
+++ b/mm/sass/blocks/sub-nav.scss
@@ -63,10 +63,14 @@
 }
 
 
-@media screen and ($tablet-widths) {
-  
-}
+@media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
-
+  .sub-nav {
+    width: 220px;
+    
+    a {
+      font-size: 12px;
+    }
+  }
 }
