--- a/mm/sass/blocks/temp.scss
+++ b/mm/sass/blocks/temp.scss
@@ -31,3 +31,15 @@
     background-size: cover;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .temp {
+    
+    &--about {
+      height: inherit;
+      padding-bottom: 100px;
+    }
+  }
+}
