--- a/mm/templates/web.html
+++ b/mm/templates/web.html
@@ -26,7 +26,7 @@
     <div class="container">
       <ul class="sub-nav">
           <li>
-            <a class="sub-link">Accounts</a>
+            <a class="sub__title">Accounts</a>
             <ul class="sub-nav__list">
                 <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
@@ -35,7 +35,7 @@
             </ul>
           </li>
           <li>
-            <a class="sub-link">Platforms</a>
+            <a class="sub__title">Platforms</a>
             <ul class="sub-nav__list">
                 <li><a href="platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
                 <li><a>MultiplyMarket Web Trader</a></li>
@@ -43,7 +43,7 @@
             </ul>
           </li>
           <li>
-            <a class="sub-link">Tools</a>
+            <a class="sub__title">Tools</a>
             <ul class="sub-nav__list">
                 <li><a href="spread.html">Spreads and trading hours</a></li>
                 <li><a href="glossary.html">Trade glossary</a></li>
