--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -899,6 +899,16 @@ body {
   -ms-flex-pack: distribute;
   justify-content: space-around; }
 
+@media screen and (max-width: 768px) {
+  .platform__flex,
+  .platform-plus__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .platform__right {
+    width: auto; } }
+
 .register {
   background: #646464 url("../img/t-bg-2.png") no-repeat top;
   background-size: cover; }
@@ -1126,6 +1136,38 @@ body {
     font-size: 18px;
     list-style-image: url("../img/r-arrow-s.png");
     opacity: 0.8; }
+
+@media screen and (max-width: 1200px) {
+  .trader__right a {
+    display: block;
+    width: 200px;
+    margin: auto; } }
+
+@media screen and (max-width: 768px) {
+  .trader__content h1 {
+    font-size: 30px; }
+  .trader__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .trader__left {
+    width: auto;
+    -webkit-box-ordinal-group: 11;
+    -ms-flex-order: 10;
+    order: 10; }
+    .trader__left b {
+      display: block;
+      text-align: center; }
+  .trader__right {
+    -webkit-box-ordinal-group: 6;
+    -ms-flex-order: 5;
+    order: 5; }
+    .trader__right img {
+      max-width: 100%; } }
 
 .spread {
   padding-bottom: 70px;
