--- a/mm/sass/blocks/spread.scss
+++ b/mm/sass/blocks/spread.scss
@@ -21,3 +21,16 @@
     list-style-image: url('../img/r-arrow-s.png');
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .spread__content {
+    
+    b {
+      display: block;
+      font-size: 25px;
+      text-align: center;
+    }
+  }
+}
