--- a/mm/templates/forex.html
+++ b/mm/templates/forex.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About Us - MultiplyMarket</title>
+  <title>Forex - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="temp  temp--about">
+  <section class="temp  temp--info">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -53,52 +53,32 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--down">
-        <h1>Trade with MultiplyMarket</h1>
-        <p class="title__sub">Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
-        <a href="register.html" class="button  button--title">Open account</a>
-      </div>
-    </div>
-  </section>
-  <section class="give">
-    <div class="container">
-      <h1>Multiply Market gives you</h1>
-      <div class="give__flex">
-        <div class="give__box">
-          <img src="../img/calc.svg" alt="">
-          <p>Means for investing in forex, futures and indices on a wide number of international marketplaces</p>
-        </div>
-        <div class="give__box">
-          <img src="../img/device.svg" alt="">
-          <p>Top notch trade platform, available on all relevant devices – PC, Mac, Android and Apple phones</p>
-        </div>
-        <div class="give__box">
-          <img src="../img/signal.svg" alt="">
-          <p>Timely reports and indicators, which let you closely follow how your trade develops with each signal, along with vital success strategies</p>
-        </div>
-        <div class="give__box">
-          <img src="../img/lawyer.svg" alt="">
-          <p>A personalized education system – massive amounts of trading information at your disposal</p>
-        </div>
-      </div>
-      <hr>
-      <div class="give__flex">
-        <div class="give__box">
-          <img src="../img/graph.svg" alt="">
-          <p>Superior request processing and spreads</p>
-        </div>
-        <div class="give__box">
-          <img src="../img/algo.svg" alt="">
-          <p>Algo Trading – a clever computer program which aids you by making trading faster and better overall</p>
-        </div>
-        <div class="give__box">
-          <img src="../img/acc.svg" alt="">
-          <p>Various account choices, catering to each user`s specific circumstances. You can also change the type of your account if there is a need</p>
-        </div>
-        <div class="give__box">
-          <img src="../img/support.svg" alt="">
-          <p>Excellent user care and technical support, which let you focus on trading and feel safe</p>
-        </div>
+      <div class="info">
+        <h1>Forex</h1>
+        <b class="info__title">Main advantages of trading Forex with MultiplyMarket</b>
+        <p>MetaTrader4 is commonly a known trading software used by the MultiplyMarket platform that, added with our high degree of professional experience and knowledge, could bring you the most higher Forex trading results on the web. You can perform your trading using all types of multiple devices, such as smartphones, PC, desktops or laptops, which provides you with lots of freedoms and adaptability to succeed in your trading.</p>
+        <b>Features of the Platform</b>
+        <p>This platform is extremely effective, user-friendly and global recognized due to its constant developing and upgrading along with newly-listed world known investigations. We make sure that the trader has the best degree of progressive support.</p>
+        <b>List of major benefits:</b>
+        <ul>
+          <li>Excluding of redundant bureaucracy and paperwork</li>
+          <li>Wide selection of available trading assets</li>
+          <li>Trade execution just in one click</li>
+          <li>Easy adjusting and settings to set up user’s preferences</li>
+          <li>Powerful forecast following the value changes</li>
+          <li>Notifications, that can be sent just on your mobile, alert you to trade</li>
+          <li>Fees-free</li>
+          <li>24/7 clients support</li>
+        </ul>
+        <p>Make your investments runny, process every single order smoothly and be back with our clients support service and significant markets signals via this highly powerful and progressive trading broker.</p>
+        <b class="info__title">What is Forex</b>
+        <b>The definition of Forex is the trading of different currency pairs.</b>
+        <p>The trading occurs between one currency against another. One currency is compared with the other. For example, the rate of the USDGBP currency pair is 0.66, then it means that 1 USA dollar costs 0.66 British Pounds. The goal of Forex is to see if the American dollar will enhance or not its price equated to the British Pound. If it does, then the trader should buy the USDGBP pair on this term.</p>
+        <p>In the case when the price goes down, for instance from 0.66 to 0.64, then the USA dollar has a descended position. If the price moves in the opposite way, for example from 0.66 to 0.69, then the USA dollar is increasing its price against the British Pound. You will meet often the terms “short” and “lot” where “long”, in that instance, correlate with the Dollar and “short” refers to the British Pound. Because the GBP stated its price in the USD.
+The other important expression that you must take into consideration is “the major”, which signify the ruling global currency pairs, such as the AUDUSD, the USDJPY, the EURUSD, the USDCAD, the USDCHF and the GBPUSD. And every one of them has the Dollar inside. We have the phrase “cross pairs” which refers to pairs that do not have the Dollar in them.</p>
+        <p>Forex does not function as a real physical currency transaction. All transitions and swaps are going on the Internet, which means that this market works only as speculation with currencies. Approximate statistic says that more over 4 trillion dollars are being swapped every day all around the globe, but all the assets are engaged in many types – future, forward, currency exchange and so on.</p>
+        <p>The Forex trading works without breaks, during the whole week and 24 hours a day, but it has holidays on weekends.</p>
+        <p>Look for additional Forex information at the MultiplyMarket learning section.</p>
       </div>
     </div>
   </section>
@@ -108,20 +88,20 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="#">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="careers.html">Careers</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="security.html">Security</a></li>
+          <li><a href="#">Security</a></li>
         </ul>
         <ul>
           <b>Assets</b>
-          <li><a href="forex.html">Forex</a></li>
-          <li><a href="futures.html">Futures</a></li>
+          <li><a href="#">Forex</a></li>
+          <li><a href="#">Futures</a></li>
           <li><a href="#">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
