--- a/mm/templates/security.html
+++ b/mm/templates/security.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account Funding - MultiplyMarket</title>
+  <title>Security - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="temp  temp--faq">
+  <section class="temp  temp--info">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -28,7 +28,7 @@
           <li>
             <a class="sub__title">Accounts</a>
             <ul class="sub-nav__list">
-                <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
+                <li><a>Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
                 <li><a href="segregated.html">Segregated account</a></li>
                 <li><a href="register.html">Open live account</a></li>
@@ -49,38 +49,47 @@
                 <li><a href="glossary.html">Trade glossary</a></li>
                 <li><a href="signals.html">Forex Signals</a></li>
                 <li><a href="account-faq.html">Account faq</a></li>
-                <li><a>Account funding & Withdrawal</a></li>
+                <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
           </li>
       </ul>
-      <div class="title">
-        <h1>Account Funding</h1>
-      </div>
-      <div class="content">
-        <p>You can put money on your Multiply Market account in 3 different ways, according to your preferences. Log in to your Multiply Market account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
-        <b>1. Using a Credit Card</b>
-        <p>The quickest method available. It lets you put money on your profile momentarily. Making a deposit with a credit card is super easy as well, you just need to choose it as your desired method and then fill in the necessary information. Note that you need to have an international credit card in order for the payment to be accepted.</p>
-        <p>The smallest deposit amount is $250, whereas the deposit ceiling is $5,000. The withdrawal limitations are the same.</p>
-        <b>2. Bank Draft</b>
-        <p>Sometimes the transaction might take up to 5 days to get processed, so please have that in mind when using a bank draft.</p>
-        <b>3. Wire Transfer</b>
-        <p>In order to use a wire transfer to put money on your account, you need to fill in the necessary documents at the bank. Know that there is a minimum allowed amount of $10000 only, so you need to consider if this is the right deposit option for you.</p>
-        <p>It is possible that the process takes about 5 work days before the payment is completed. As soon as the money is on your profile, you will receive an e-mail notification.</p>
-        <b>Withdrawing money from the account</b>
-        <p>Withdrawing money from your Multiply Market profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
-        <p>The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn in any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
-        <b>In order to make a withdrawal you need to:</b>
+      <div class="info">
+        <h1>Security</h1>
+        <b>Security Policies</b>
+        <p>In MultiplyMarket, the security of funds and our client’s information is our topmost priority. Our security team is continually improving our end-to-end security measures, bettering auditing processes, and reducing the ‘attack surface’ of our infrastructure. Please note that we cannot disclose too many details of the security measures implemented on the platform for security and proprietary reasons.</p>
+        <b>User Account Protection</b>
+        <p>Some of the security measures highlighted below are in place by default, and others can be activated based on the security level you need.</p>
+        <b>Two-factor authentication (2FA)</b>
+        <p>You can add an extra layer of security to your account and protect the various sensitive operations such as logging in, generating API keys, and withdrawing. Configure two-factor authentication using Google Authenticator, Twilio, or a U2F Security Key.</p>
+        <b>Universal 2nd Factor (U2F)</b>
+        <p>Use a physical Security Key to take advantage of the ultra-secure FIDO Universal 2nd Factor (U2F) open authentication standard.</p>
+        <b>Advanced verification tools to monitor the integrity of your account</b>
         <ul>
-          <li>Log in to your account in our client area and submit a withdrawal request online.</li>
-          <li>We will take care of your withdrawal as soon as we get the request. After that we are going to send the money to the account which you made the deposit from. Varying on where your bank is situated, the transaction can take about 5 days to be fully processed and completed. Usually though, it takes less.</li>
+          <li>Login data is saved and analyzed for unusual activity.</li>
+          <li>An intelligent system detects IP Address changes to prevent session hijacking.</li>
+          <li>Email notifications report logins and include a link to instantly freeze your account if you suspect malicious activity.</li>
+          <li>Limit access to your account based on IP address.</li>
         </ul>
-        <b>Things you should take into account:</b>
+        <b>Withdrawals protection</b>
         <ul>
-          <li>Multiply Market takes care of transferring the deposit money.</li>
-          <li>The money you’ve earned from trading will be sent to the account that you`ve specified.</li>
-          <li>In some cases a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
+          <li>Security system monitors withdrawals by IP address and other user behavior patterns, triggering manual admin inspection on withdrawals that appear unusual.</li>
+          <li>Withdrawal confirmation step that is immune to malicious browser malware.</li>
+          <li>Define an address whitelist to ensure no withdrawals can go anywhere else.</li>
         </ul>
-        <p>In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a Multiply Market employee.</p>
+        <b>Advanced API key permissions</b>
+        <p>Create API keys with advanced read/write permissions on a per-feature basis. Unleash the full power of the platform through our REST and WebSockets APIs.</p>
+        <b>Email Encryption with OpenPGP</b>
+        <p>Want more protection? Encrypted email communication (PGP) adds an extra layer of privacy and security.</p>
+        <b>Storage of funds</b>
+        <p>We keep all funds on so-called cold accounts. This means they are not directly connected to exchange servers directly. This ensures that no third-parties can ever get access to these funds. furthermore, all accounts are properly encrypted.</p>
+        <b>Up-to-date systems to host the platform</b>
+        <p>Our servers network is protected using always up-to-date software and the best possible practices.</p>
+        <b>Automatic backup of the database once a day</b>
+        <p>Once a day, the database of the platform is backed up, encrypted and compressed as an archive.</p>
+        <b>Duplication of backup data automatically</b>
+        <p>As soon as a new backup is ready (database, log files,…), it is sent to others servers in several physical locations.</p>
+        <b>Protection from DDoS attacks</b>
+        <p>We are protected by automatic Distributed Denial of Service protection to ensure that trading cannot be halted by outside attacks.</p>
       </div>
     </div>
   </section>
