--- a/mm/sass/blocks/temp.scss
+++ b/mm/sass/blocks/temp.scss
@@ -30,6 +30,11 @@
     background: #646464 url('../img/t-bg-1.png') no-repeat top;
     background-size: cover;
   }
+  
+  &--info {
+    background: #646464 url('../img/edge.png') no-repeat top;
+    background-size: cover;
+  }
 }
 
 @media screen and ($tablet-widths) {}
