--- a/mm/templates/about.html
+++ b/mm/templates/about.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account Funding - MultiplyMarket</title>
+  <title>About Us - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="temp  temp--faq">
+  <section class="temp  temp--info">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -28,7 +28,7 @@
           <li>
             <a class="sub__title">Accounts</a>
             <ul class="sub-nav__list">
-                <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
+                <li><a>Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
                 <li><a href="segregated.html">Segregated account</a></li>
                 <li><a href="register.html">Open live account</a></li>
@@ -49,38 +49,15 @@
                 <li><a href="glossary.html">Trade glossary</a></li>
                 <li><a href="signals.html">Forex Signals</a></li>
                 <li><a href="account-faq.html">Account faq</a></li>
-                <li><a>Account funding & Withdrawal</a></li>
+                <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
           </li>
       </ul>
-      <div class="title">
-        <h1>Account Funding</h1>
-      </div>
-      <div class="content">
-        <p>You can put money on your Multiply Market account in 3 different ways, according to your preferences. Log in to your Multiply Market account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
-        <b>1. Using a Credit Card</b>
-        <p>The quickest method available. It lets you put money on your profile momentarily. Making a deposit with a credit card is super easy as well, you just need to choose it as your desired method and then fill in the necessary information. Note that you need to have an international credit card in order for the payment to be accepted.</p>
-        <p>The smallest deposit amount is $250, whereas the deposit ceiling is $5,000. The withdrawal limitations are the same.</p>
-        <b>2. Bank Draft</b>
-        <p>Sometimes the transaction might take up to 5 days to get processed, so please have that in mind when using a bank draft.</p>
-        <b>3. Wire Transfer</b>
-        <p>In order to use a wire transfer to put money on your account, you need to fill in the necessary documents at the bank. Know that there is a minimum allowed amount of $10000 only, so you need to consider if this is the right deposit option for you.</p>
-        <p>It is possible that the process takes about 5 work days before the payment is completed. As soon as the money is on your profile, you will receive an e-mail notification.</p>
-        <b>Withdrawing money from the account</b>
-        <p>Withdrawing money from your Multiply Market profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
-        <p>The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn in any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
-        <b>In order to make a withdrawal you need to:</b>
-        <ul>
-          <li>Log in to your account in our client area and submit a withdrawal request online.</li>
-          <li>We will take care of your withdrawal as soon as we get the request. After that we are going to send the money to the account which you made the deposit from. Varying on where your bank is situated, the transaction can take about 5 days to be fully processed and completed. Usually though, it takes less.</li>
-        </ul>
-        <b>Things you should take into account:</b>
-        <ul>
-          <li>Multiply Market takes care of transferring the deposit money.</li>
-          <li>The money you’ve earned from trading will be sent to the account that you`ve specified.</li>
-          <li>In some cases a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
-        </ul>
-        <p>In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a Multiply Market employee.</p>
+      <div class="info">
+        <h1>About Us</h1>
+        <p>Multiplymarkey was launched afew years back with a unique vision to provide unparalleled advanced trading conditions, advanced education, and state-of-the-art trading tools in the forex industry. Due to the continuous focus on localizing our products and services to suit each market, together with our successful collaboration with talented and experienced teams from all over the world. MultiplyMarket was quickly established as the global trademark it is today.</p>
+        <p>Our number one mission is centered on time. By valuing time and understanding the importance of efficiency in the fluctuating, lightning-fast world of financial markets, every decision we make is designed to ensure that our clients and business partners, as well as our team of professionals, invest their time wisely. This road is paved by an ironclad focus on educating our customers. Knowledge is power, and empowering traders to get the best value for their investments is our passion.</p>
+        <p>At MultiplyMarket we are committed to making sure all our clients and investors stay connected to the various opportunities that arise in the market on a daily basis and ease in connecting with one another. With MultilyMarket has your financial stockbroker you are sure to get all the professional backing and support you require to soar in Forex trading.</p>
       </div>
     </div>
   </section>
@@ -90,11 +67,11 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="#">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="about.html">About Us</a></li>
+          <li><a class="footer__active">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Contact</a></li>
