--- a/mm/templates/register.html
+++ b/mm/templates/register.html
@@ -93,20 +93,20 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a href="#">Sign Up</a></li>
+          <li><a href="register.html">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Security</a></li>
+          <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
           <b>Assets</b>
-          <li><a href="#">Forex</a></li>
-          <li><a href="#">Futures</a></li>
+          <li><a href="forex.html">Forex</a></li>
+          <li><a href="futures.html">Futures</a></li>
           <li><a href="#">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
